[package]
name = "indexed-merkle-tree"
version = "0.6.0"
edition = "2021"
authors = [
    "Ryan Quinn Ford <ryan@deltadevs.xyz>",
    "Sebastian Pusch <sebastian@deltadevs.xyz>",
]
description = "This crate provides an implementation of Indexed Merkle Trees, a version of Merkle trees that supports both membership and non-membership proofs."
homepage = "https://github.com/deltadevsde/indexed-merkle-tree"
repository = "https://github.com/deltadevsde/indexed-merkle-tree"
license = "MIT"
keywords = ["crypto", "merkle-tree", "membership", "non-membership"]
readme = "README.md"

[features]
default = []
std = [
    "serde/std", 
    "num/std",
    "num-bigint/std", 
    "num-traits/std", 
    "borsh/std",
]

[dependencies]
borsh = { version = "1.5.1", features = ["derive"], default-features = false }
num = { version = "0.4.0", default-features = false }
serde = { version = "1.0.151", features = ["derive", "rc"], default-features = false }
anyhow = { version = "1.0.44", default-features = false }
serde_json = { version = "1.0.79", optional = true }
sha2 = { version = "0.10.8", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "tree_benchmarks"
harness = false
